--- a/tabsSection.html
+++ b/tabsSection.html
@@ -2,9 +2,10 @@
 
 <div class='tabsSection' id='tabs1'>
     <div class='videoBox'>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/z0nZAXyF2BU" title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen class="iframe"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/z0nZAXyF2BU" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen class="iframe"></iframe>
     </div>
     <div class='buttonsTextBox'>
         <div class='btn-container'>
@@ -17,15 +18,18 @@
             <div class='content live' id='step1'>
                 <h3>DARK SOULS™ II</h3>
                 <p class='stepText'>
-                    Developed by FROM SOFTWARE, DARK SOULS™ II is the highly anticipated sequel to the gruelling 2011 breakout hit Dark
-                    Souls. The unique old-school action RPG experience captivated imaginations of gamers worldwide with incredible challenge
+                    Developed by FROM SOFTWARE, DARK SOULS™ II is the highly anticipated sequel to the gruelling 2011
+                    breakout hit Dark
+                    Souls. The unique old-school action RPG experience captivated imaginations of gamers worldwide with
+                    incredible challenge
                     and intense emotional reward.
                 </p>
             </div>
             <div class='content' id='step2'>
                 <h3>Valheim</h3>
                 <p class='stepText'>
-                    A brutal exploration and survival game for 1-10 players, set in a procedurally-generated purgatory inspired by viking
+                    A brutal exploration and survival game for 1-10 players, set in a procedurally-generated purgatory
+                    inspired by viking
                     culture. Battle, build, and conquer your way to a saga worthy of Odin’s patronage!
                 </p>
             </div>
